--- a/taskmanager/templates/tasks.html
+++ b/taskmanager/templates/tasks.html
@@ -10,4 +10,28 @@
     </div>
 </div>
 
+<ul class="collapsible">
+    {% for task in tasks| attribute="due_date" %}
+    <li>
+        <div class="collapsible-header white-text light-blue darken-4">
+            <i class="fas fa-caret-down"></i>
+            <strong>{{ task.task_name}}</strong> : {{task.due_date.strftime("%d %B, %Y")}}
+            {% if task.is_urgent == True %}
+            <i class="fas fa-exclamation-cicle light-blue-text text-lighten-2"></i>
+            {% endif %}
+        </div>
+        <div class="collapsible-body">
+            <strong>
+                {{ task.category }}
+                <p> {{ task.task_description }} </p>
+                <p>
+                    <a href="{{ url_for('edit_task', task_id=task.id) }}" class="btn green accent-4">Edit</a>
+                </p>
+            </strong>
+        </div>
+    </li>
+    <li>
+        {% endfor %}
+</ul>
+
 {% endblock %}
